--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Ionic 2/3 Gallery Modal (to preview photos)",
   "main": "dist/index.js",
   "types": "dist/index.qd.ts",
+  "module": "dist/ionic-gallery-modal.js",
+  "typings": "dist/ionic-gallery-modal.d.ts",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
