--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "name": "ionic-gallery-modal",
   "version": "0.1.1",
-  "description": "Ionic 2/3 Gallery Modal (to preview photos)",
-  "main": "dist/index.js",
-  "types": "dist/index.qd.ts",
-  "module": "dist/ionic-gallery-modal.js",
-  "typings": "dist/ionic-gallery-modal.d.ts",
-  "scripts": {
-    "build": "gulp build",
-    "build:watch": "gulp",
-    "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ionic-gallery-modal -d docs --hideGenerator",
-    "docs:serve": "npm run docs:build -- -s",
-    "docs:watch": "npm run docs:build -- -s -w",
-    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
-    "test": "tsc && karma start"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikini/ionic-gallery-modal"
+  },
+  "author": {
+    "name": "Ciprian Mocanu",
+    "email": "ciprian@mbe.ro"
   },
   "keywords": [
     "ionic 2",
@@ -22,56 +15,16 @@
     "gallery",
     "gallery modal"
   ],
-  "author": {
-    "name": "Ciprian Mocanu",
-    "email": "ciprian@mbe.ro"
-  },
   "license": "MIT",
-  "dependencies": {
-    "ionic-angular": "3.3.0"
+  "bugs": {
+    "url": "https://github.com/nikini/ionic-gallery-modal/issues"
   },
-  "devDependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@compodoc/compodoc": "^1.0.0-beta.7",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "core-js": "^2.4.1",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-rollup": "^2.11.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.5.3",
-    "node-sass-tilde-importer": "^1.0.0",
-    "node-watch": "^0.5.4",
-    "protractor": "^5.1.2",
-    "rollup": "^0.41.6",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.1.1",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "2.3.3",
-    "zone.js": "^0.8.11"
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nikini/ionic-gallery-modal.git"
+  "module": "ionic-gallery-modal.js",
+  "typings": "ionic-gallery-modal.d.ts",
+  "peerDependencies": {
+    "@angular/core": "^4.1.2",
+    "ionic-angular": "3.3.0",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.10"
   }
 }
