--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "typings": "ionic-gallery-modal.d.ts",
   "peerDependencies": {
     "@angular/core": "^4.1.2",
-    "ionic-angular": "3.3.0",
+    "ionic-angular": "^3.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.10"
   }
